# agentnexus

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  security.rs  utils.rs
src-tauri/src/control_plane/: agent_presets.rs  agent_rules_v2.rs  commands.rs  local_agent_translation.rs  mod.rs  skills_manager.rs  skills_usage.rs
src-tauri/src/control_plane/agent_rules_v2/: api.rs  apply.rs  connection_defaults.rs  normalize.rs  permissions.rs  publish.rs  status_summary.rs
src-tauri/src/control_plane/channel_test/: anthropic.rs  api.rs  attribution.rs  bedrock.rs  checks.rs  http.rs  mod.rs  openai.rs  persistence.rs  probes.rs  query.rs  report.rs  runner.rs  sampling.rs  tests.rs  validation.rs
src-tauri/src/control_plane/commands/: audit_security_commands.rs  distribution_commands.rs  mod.rs  prompt_commands.rs  shared.rs  skills_commands.rs  skills_support.rs  target_commands.rs  workspace_commands.rs
src-tauri/src/control_plane/local_agent_translation/: config.rs  executor.rs  profile.rs  prompt_translation.rs  validation.rs
src-tauri/src/control_plane/model_usage/: api.rs  dashboard.rs  jobs.rs  mod.rs  parser.rs  persistence.rs  pricing.rs  query.rs  (+2 more)
src-tauri/src/db/: channel_test_migrations.rs  model_usage_migrations.rs  schema.rs
src-tauri/src/domain/: models.rs
src-tauri/src/execution_plane/: distribution.rs  mod.rs  skills.rs
(+321 files in other folders)
